Added formula engine settings support

--- a/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
+++ b/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
@@ -18,4 +18,19 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\EngineResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>EngineResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\EngineResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>EngineResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
