Added package description

--- a/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
+++ b/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
@@ -6,6 +6,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageIcon>Icon.png</PackageIcon>
     <Version>1.0.0.0</Version>
+    <Description>A strong and fast library to parse and evaluate formulas. It also supports custom formulas. This library is built using 'AlphaX.Parserz' library.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
