--- a/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
+++ b/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
@@ -5,11 +5,13 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageIcon>Icon.png</PackageIcon>
-    <Version>1.0.4.3</Version>
+    <Version>1.0.4.4</Version>
     <Description>A strong and fast library to parse and evaluate formulas. It also supports custom formulas. This library is built using 'AlphaX.Parserz' library.</Description>
     <Company>AlphaX</Company>
     <IncludeSymbols>False</IncludeSymbols>
     <SignAssembly>False</SignAssembly>
+    <Authors>AlphaX</Authors>
+    <PackageTags>alpha;parse;parser;engines;formula;alphax.formula;formula engine; alphax.formulaengine;</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
