--- a/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
+++ b/AlphaX.FormulaEngine/AlphaX.FormulaEngine.csproj
@@ -5,7 +5,7 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageIcon>Icon.png</PackageIcon>
-    <Version>1.0.8.0</Version>
+    <Version>2.0.0</Version>
     <Description>A strong and fast library to parse and evaluate formulas. It also supports custom formulas. This library is built using 'AlphaX.Parserz' library.
 
 Please provide your feedback or suggestions here - https://docs.google.com/forms/d/e/1FAIpQLSfKVz5KlycuTM9j7ZQApk0_vK7OEyGK-wCUUDSfPocHWq9MFg/viewform?usp=sf_link</Description>
@@ -14,6 +14,8 @@ Please provide your feedback or suggestions here - https://docs.google.com/forms
     <SignAssembly>False</SignAssembly>
     <Authors>AlphaX</Authors>
     <PackageTags>alpha;parse;parser;engines;formula;alphax.formula;formula engine; alphax.formulaengine;</PackageTags>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
+    <FileVersion>2.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -25,14 +27,14 @@ Please provide your feedback or suggestions here - https://docs.google.com/forms
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\Parserz\AlphaX.Parserz\Icon.png">
+    <None Include="Icon.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AlphaX.Parserz" Version="1.0.7" />
+    <PackageReference Include="AlphaX.Parserz" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
